--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<!-- <div class="container text-center">
   <form>
     <div class="form-group">
       <label for="feature">Select a feature:</label>
@@ -36,4 +36,5 @@
       </tr>
     </tbody>
   </table>
-</div>
+</div> -->
+<router-outlet></router-outlet>
